--- a/sampleApp.json
+++ b/sampleApp.json
@@ -1,5 +1,14 @@
 {
 	"events": [
-		{}
+		{
+			"eventName": "6.824 Lecture",
+			"startTime": "1:00PM",
+			"endTime": "2:30PM"
+		},
+		{
+			"eventName": "MMT Practice",
+			"startTime": "7:00PM",
+			"endTime": "9:00PM"
+		}
 	]
 }
