--- a/sampleApp2.json
+++ b/sampleApp2.json
@@ -1,7 +1,8 @@
 {
 	"task": [
 		{
-			"taskChecked": false
+			"taskChecked": false,
+			"taskName": "Do dishes"
 		},
 		{
 			"taskChecked": true
