--- a/sampleApp.json
+++ b/sampleApp.json
@@ -1,4 +1,20 @@
 {
+	"events": [
+		{
+			"eventName": "Mavo Meeting",
+			"startTime": "13:00",
+			"endTime": "14:00"
+		},
+		{
+			"eventName": "18.200 Lecture",
+			"startTime": "14:00",
+			"endTime": "15:00"
+		},
+		{
+			"eventName": "Gym",
+			"startTime": "15:00"
+		}
+	],
 	"task": [],
 	"i_task": [
 		{
@@ -8,17 +24,5 @@
 	],
 	"c_task": [
 		{}
-	],
-	"events": [
-		{
-			"eventName": "6.824 Lecture",
-			"startTime": "1:00PM",
-			"endTime": "2:30PM"
-		},
-		{
-			"eventName": "MMT Practice",
-			"startTime": "7:00PM",
-			"endTime": "9:00PM"
-		}
 	]
 }
